--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,15 @@
 name: octoDNS CloudflareProvider
-on: [pull_request]
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  config:
-    runs-on: ubuntu-latest
-    outputs:
-      json: ${{ steps.load.outputs.json }}
-    steps:
-    - id: load
-      run: |
-        {
-          echo 'json<<EOF'
-          curl -L https://github.com/octodns/octodns/raw/main/.ci-config.json
-          echo EOF
-        } >> $GITHUB_OUTPUT
   ci:
-    needs: config
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ${{ fromJson(needs.config.outputs.json).python_versions_active }}
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
       - name: Setup python
@@ -32,14 +21,13 @@ jobs:
         run: |
           ./script/cibuild
   setup-py:
-    needs: config
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ fromJson(needs.config.outputs.json).python_version_current }}
+          python-version: "3.13"
           architecture: x64
       - name: CI setup.py
         run: |
